--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     </tr>
 
       <td><div class = "boxes">
-<div class = "ppp"><sup>$</sup> 1.00 <sup>/mo</sup></div>
+<sup>$</sup><div class = "ppp">  1.00 </div><sup>/mo</sup>
 </div></td>
 
       <td> <ul> Lorem ipsum dolor sit amet, consectetur adipiscing elit. </ul> 
@@ -63,7 +63,7 @@
 
 
     <tr>
-       <div class = "ppp"> <td><div class = "boxes">$2.99</div></td> </div>
+      <td><div class =  <div class = "ppp"> $2.99</div></div></td> 
       <td><ul> Lorem ipsum dolor sit amet, consectetur adipiscing elit. </ul> 
 	 <ul>Proin et ipsum nec nibh vehicula cursus.</ul>
   	 <ul >Nulla facilisi. Nullam aliquam ultrices interdum. </ul>
@@ -72,7 +72,7 @@
   </td>
     </tr>
   <tr>
-     <div class = "ppp">  <td><div class = "boxes">$3.99</div></td> </div>
+    <td><div class = "boxes"> <div class = "ppp"> $3.99</div></div></td> 
       <td><ul> Lorem ipsum dolor sit amet, consectetur adipiscing elit. </ul> 
 	 <ul>Proin et ipsum nec nibh vehicula cursus.</ul>
   	 <ul >Nulla facilisi. Nullam aliquam ultrices interdum. </ul></td>
