--- a/index.html
+++ b/index.html
@@ -44,41 +44,39 @@
     <img src="pc-plus-logo.png" alt="PC Plus Logo">
   </article>
 
-  <div class = "pricing">
-  <h1 style="margin-top:0px;"> PRICING </h1> </div>
-
-    <tr>
-    </tr>
-
-      <td><div class = "boxes">
-<sup>$</sup><div class = "ppp">  1.00 </div><sup>/mo</sup>
-</div></td>
-
-      <td> <ul> Lorem ipsum dolor sit amet, consectetur adipiscing elit. </ul> 
-	 <ul>Proin et ipsum nec nibh vehicula cursus.</ul>
-  	 <ul >Nulla facilisi. Nullam aliquam ultrices interdum. </ul> </td>
+ 
+<h1> PRICING </h1>
+<h1><p>$1.99/month</p> </h1><hr>
+<ul> 
 
 
-    </tr>
+	<li>Crazy plan idea</li>
+	<li>Crazy Plan idea *2 </li>
+	<li>Crazy Plan Idea * 3</li>
+<br>
+
+</ul>
+<h1><p>$3.99/month</p> </h1><hr> 
+<ul> 
 
 
-    <tr>
-      <td><div class =  <div class = "ppp"> $2.99</div></div></td> 
-      <td><ul> Lorem ipsum dolor sit amet, consectetur adipiscing elit. </ul> 
-	 <ul>Proin et ipsum nec nibh vehicula cursus.</ul>
-  	 <ul >Nulla facilisi. Nullam aliquam ultrices interdum. </ul>
+	<li>Crazy plan idea</li>
+	<li>Crazy Plan idea *2 </li>
+	<li>Crazy Plan Idea * 3</li>
+
+<br>
+</ul>
+
+<h1><p>$5.99/year</p> </h1><hr>  
+<ul> 
 
 
-  </td>
-    </tr>
-  <tr>
-    <td><div class = "boxes"> <div class = "ppp"> $3.99</div></div></td> 
-      <td><ul> Lorem ipsum dolor sit amet, consectetur adipiscing elit. </ul> 
-	 <ul>Proin et ipsum nec nibh vehicula cursus.</ul>
-  	 <ul >Nulla facilisi. Nullam aliquam ultrices interdum. </ul></td>
-    </tr>
+	<li>Crazy plan idea</li>
+	<li>Crazy Plan idea *2 </li>
+	<li>Crazy Plan Idea * 3</li>
 
-  </div>
+<br>
+</ul>
 
   <article id="about">
     <div id="faiz-up" class="up-pos">
