--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
   </article>
 
  </div>
-
+<div class = "pricing2">
 <h1> PRICING </h1>
 <h1><p>$1.99/month</p> </h1><hr>
 <ul> 
@@ -78,6 +78,7 @@
 
 <br>
 </ul>
+</div>
 
   <article id="about">
     <div id="faiz-up" class="up-pos">
