--- a/index.html
+++ b/index.html
@@ -45,8 +45,10 @@
   </article>
 
  </div>
-<div class = "pricing2">
+
+<div class = "pricing">
 <h1> PRICING </h1>
+</div>
 <h1><p>$1.99/month</p> </h1><hr>
 <ul> 
 
@@ -78,7 +80,7 @@
 
 <br>
 </ul>
-</div>
+
 
   <article id="about">
     <div id="faiz-up" class="up-pos">
