--- a/index.html
+++ b/index.html
@@ -48,35 +48,35 @@
 
 <div class = "pricing">
 <h1> PRICING </h1>
-<h1><p>$1.99/month</p> </h1><hr>
+<h1><p>$1.99 Monthly</p> </h1><hr>
 
 <ul> 
 
 
-	<li>Crazy plan idea</li>
-	<li>Crazy Plan idea *2 </li>
-	<li>Crazy Plan Idea * 3</li>
+	<li>Calorie Goal</li>
+	<li>Healthy meal recipies every month</li>
+	<li>1500 bonus PC points for sign up.</li>
 <br>
 
 </ul>
-<h1><p>$3.99/month</p> </h1><hr> 
+<h1><p>$3.99 Semi-Annually</p> </h1><hr> 
 <ul> 
 
 
-	<li>Crazy plan idea</li>
-	<li>Crazy Plan idea *2 </li>
-	<li>Crazy Plan Idea * 3</li>
+	<li>Food Analysis (i.e. Learn which foods rank highest in the nutrients you care about.)</li>
+	<li>Meal Level Carbs, Protein and Fat (i.e view macronutrients by gram or percentage.)</li>
+	<li>3500 bonus PC points for sign up.</li>
 
 <br>
 </ul>
 
-<h1><p>$5.99/year</p> </h1><hr>  
+<h1><p>$5.99 Annually</p> </h1><hr>  
 <ul> 
 
 
-	<li>Crazy plan idea</li>
-	<li>Crazy Plan idea *2 </li>
-	<li>Crazy Plan Idea * 3</li>
+	<li>Track your diet on the nutridaili app</li>
+	<li>Articles and tips by nutritionists</li>
+	<li>5500 bonus PC points for sign up.</li>
 
 <br>
 <br>
