--- a/index.html
+++ b/index.html
@@ -48,37 +48,36 @@
 
 <div class = "pricing">
 <h1> PRICING </h1>
-<h1><p>$1.99 Monthly</p> </h1><hr>
+<h2><p>$1.99 Monthly</p> </h2><hr>
 
 <ul> 
 
 
 	<li>Calorie Goal</li>
 	<li>Healthy meal recipies every month</li>
-	<li>1500 bonus PC points for sign up.</li>
+	<li>1500 bonus PC points (Included once when signing up)</li>
 <br>
 
 </ul>
-<h1><p>$3.99 Semi-Annually</p> </h1><hr> 
+<h2><p>$3.99 Semi-Annually</p> </h2><hr> 
 <ul> 
 
 
 	<li>Food Analysis (i.e. Learn which foods rank highest in the nutrients you care about.)</li>
 	<li>Meal Level Carbs, Protein and Fat (i.e view macronutrients by gram or percentage.)</li>
-	<li>3500 bonus PC points for sign up.</li>
+	<li>3500 bonus PC points (Included once when signing up)</li>
 
 <br>
 </ul>
 
-<h1><p>$5.99 Annually</p> </h1><hr>  
+<h2><p>$5.99 Annually</p> </h2><hr>  
 <ul> 
 
 
 	<li>Track your diet on the nutridaili app</li>
 	<li>Articles and tips by nutritionists</li>
-	<li>5500 bonus PC points for sign up.</li>
+	<li>5500 bonus PC points (Included once when signing up)</li>
 
-<br>
 <br>
 
 </ul>
