--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
  </div>
 
 <div class = "pricing">
-<h1> PRICING </h1>
+<h1> <font color="orange"> Pricing </font></h1>
 <h2><p>$1.99 Monthly</p> </h2><hr>
 
 <ul> 
