--- a/index.html
+++ b/index.html
@@ -47,15 +47,16 @@
  </div>
 
 <div class = "pricing">
-<h1> <font color="orange"> Pricing </font></h1>
+<h1> <font color="red"> Pricing </font></h1>
 <h2><p>$1.99 Monthly</p> </h2><hr>
 
 <ul> 
 
-
+	<font color="white">
 	<li>Calorie Goal</li>
 	<li>Healthy meal recipies every month</li>
 	<li>1500 bonus PC points (Included once when signing up)</li>
+	</font>
 <br>
 
 </ul>
