--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
  </div>
 
 <div class = "pricing">
-<h1> <font color= F6392A;> Pricing </font></h1>
+<h1> <font size= "16" color= F6392A;> Pricing </font></h1>
 <h3><p>$1.99 Monthly</p> </h3><hr>
 
 <ul> 
