--- a/index.html
+++ b/index.html
@@ -47,38 +47,38 @@
  </div>
 
 <div class = "pricing">
-<h1> <font size= "14" color= "#FA3C2D"> Pricing </font></h1>
+<h1> <font size= "14" color= "#F72514"> Pricing </font></h1>
 <h3><p>$1.99 Monthly</p> </h3><hr>
 
 <ul> 
 
-
+	<font color="white">
 	<li>Calorie Goal</li>
 	<li>Healthy meal recipies every month</li>
 	<li>1500 bonus PC points (Included once when signing up)</li>
-	
+	</font>
 <br>
 
 </ul>
 <h3><p>$3.99 Semi-Annually</p> </h3><hr> 
 <ul> 
 
-
+	<font color="white">
 	<li>Food Analysis (i.e. Learn which foods rank highest in the nutrients you care about.)</li>
 	<li>Meal Level Carbs, Protein and Fat (i.e view macronutrients by gram or percentage.)</li>
 	<li>3500 bonus PC points (Included once when signing up)</li>
-
+	</font>
 <br>
 </ul>
 
 <h3><p>$5.99 Annually</p> </h3><hr>  
 <ul> 
 
-
+	<font color="white">
 	<li>Track your diet on the nutridaili app</li>
 	<li>Articles and tips by nutritionists</li>
 	<li>5500 bonus PC points (Included once when signing up)</li>
-
+	</font>
 <br>
 
 </ul>
