--- a/pricing.html
+++ b/pricing.html
@@ -1,48 +1,33 @@
-﻿<!DOCTYPE html>
-<html>
-  <head>
-    <link rel="StyleSheet" href="pricing.css">
-  </head>
-  <body>
-<div class = "pricingT">
-<h1> PRICING </h1>
+<div class = "pricing">
+<h1> <font size= "14" color= "#F72514"> Pricing </font></h1>
+<h3><p>$1.99 Monthly</p> </h3><hr>
+
+<ul> 
+
+	<li>Calorie Goal</li>
+	<li>Healthy meal recipies every month</li>
+	<li>1500 bonus PC points (Included once when signing up)</li>
+<br>
+
+</ul>
+<h3><p>$3.99 Semi-Annually</p> </h3><hr> 
+<ul> 
+
+	<li>Food Analysis (i.e. Learn which foods rank highest in the nutrients you care about.)</li>
+	<li>Meal Level Carbs, Protein and Fat (i.e view macronutrients by gram or percentage.)</li>
+	<li>3500 bonus PC points (Included once when signing up)</li>
+<br>
+</ul>
+
+<h3><p>$5.99 Annually</p> </h3><hr>  
+<ul> 
+
+	<li>Track your diet on the nutridaili app</li>
+	<li>Articles and tips by nutritionists</li>
+	<li>5500 bonus PC points (Included once when signing up)</li>
+<br>
+
+</ul>
+
 </div>
-<table>
-  <tr>
-  </tr>
 
-    <td><div class = "boxes">$1.99</div></td>
-
-    <td>Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
-	Aenean et felis diam. Integer vitae tortor cursus, facilisis
-	 magna sit amet, efficitur augue. Proin et ipsum nec nibh vehicula cursus.
-	 Nulla facilisi. Nullam aliquam ultrices interdum. Phasellus eleifend
-	 leo quis mauris tempus, ultricies mollis arcu tincidunt.</td>
-
-
-  </tr>
-
-
-  <tr>
-      <td><div class = "boxes">$2.99</div></td>
-    <td>Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
-	Aenean et felis diam. Integer vitae tortor cursus, facilisis
-	 magna sit amet, efficitur augue. Proin et ipsum nec nibh vehicula cursus.
-	 Nulla facilisi. Nullam aliquam ultrices interdum. Phasellus eleifend
-	 leo quis mauris tempus, ultricies mollis arcu tincidunt.
-
-
-</td>
-  </tr>
-<tr>
-      <td><div class = "boxes">$3.99</div></td>
-    <td>Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
-	Aenean et felis diam. Integer vitae tortor cursus, facilisis
-	 magna sit amet, efficitur augue. Proin et ipsum nec nibh vehicula cursus.
-	 Nulla facilisi. Nullam aliquam ultrices interdum. Phasellus eleifend
-	 leo quis mauris tempus, ultricies mollis arcu tincidunt.</td>
-  </tr>
-</table>
-
-  </body>
-</html>
