final touches to team page and fixed some resolution bugs

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 </div>
 </article>
 <article id="about">
-        <h1>About Us</h1>
+        <h1 style="text-align:center; font-size:50;">The Team!</h1>
 
     <div class="row">
       <div class="column">
@@ -98,12 +98,11 @@
           <div class="container">
             <div id="alex-up" class="up-pos">
               <div id="up-wrapper">
-                  <div id="up-container" style="width:29%; background-color: black; text-align: center;">
+                  <div id="up-container" style="width: 29%; background-color: #1b1e33; text-align: center;">
                   <h2>Alex Moussa</h2>
-                  <p class="title">CEO and Founder</p>
-                  <p>Some text that describes me lorem ipsum ipsum lorem.</p>
-                  <p>example@example.com</p>
-                  <p><button class="button">Contact</button></p>
+                  <p class="title">Developper and Founder</p>
+                  <p>Always learning and pursuing my intersts in Web Dev.</p>
+                  <p><button class="button-2">Contact</button></p>
                   <p><a href="javascript:void(0)" onclick="toggle_visibility('alex-up');">Close</a></p>
                 </div>
               </div>
@@ -120,12 +119,11 @@
             <div class="container">
               <div id="faiz-up" class="up-pos">
                 <div id="up-wrapper">
-                    <div id="up-container" style="width:29%; background-color: black; text-align: center;">
+                    <div id="up-container" style="width:29%; background-color: #1b1e33; text-align: center;">
                     <h2>Faizaan</h2>
                     <p class="title">CEO and Founder</p>
                     <p>Some text that describes me lorem ipsum ipsum lorem.</p>
-                    <p>example@example.com</p>
-                    <p><button class="button">Contact</button></p>
+                    <p><button class="button-2">Contact</button></p>
                     <p><a href="javascript:void(0)" onclick="toggle_visibility('faiz-up');">Close</a></p>
                   </div>
                 </div>
@@ -142,12 +140,11 @@
             <div class="container">
               <div id="rohan-up" class="up-pos">
                 <div id="up-wrapper">
-                    <div id="up-container" style="width:29%; background-color: black; text-align: center;">
+                    <div id="up-container" style="width:29%; background-color: #1b1e33; text-align: center;">
                     <h2>Rohan</h2>
                     <p class="title">CEO and Founder</p>
                     <p>Some text that describes me lorem ipsum ipsum lorem.</p>
-                    <p>example@example.com</p>
-                    <p><button class="button">Contact</button></p>
+                    <p><button class="button-2">Contact</button></p>
                     <p><a href="javascript:void(0)" onclick="toggle_visibility('rohan-up');">Close</a></p>
                   </div>
                 </div>
@@ -164,12 +161,11 @@
             <div class="container">
               <div id="anton-up" class="up-pos">
                 <div id="up-wrapper">
-                    <div id="up-container" style="width:29%; background-color: black; text-align: center;">
+                    <div id="up-container" style="width:29%; background-color: #1b1e33; text-align: center;">
                     <h2>Anton</h2>
                     <p class="title">CEO and Founder</p>
                     <p>Some text that describes me lorem ipsum ipsum lorem.</p>
-                    <p>example@example.com</p>
-                    <p><button class="button">Contact</button></p>
+                    <p><button class="button-2">Contact</button></p>
                     <p><a href="javascript:void(0)" onclick="toggle_visibility('anton-up');">Close</a></p>
                   </div>
                 </div>
@@ -186,12 +182,11 @@
             <div class="container">
               <div id="waleed-up" class="up-pos">
                 <div id="up-wrapper">
-                    <div id="up-container" style="width:29%; background-color: black; text-align: center;">
+                    <div id="up-container" style="width:29%; background-color: #1b1e33; text-align: center;">
                     <h2>Waleed</h2>
                     <p class="title">CEO and Founder</p>
                     <p>Some text that describes me lorem ipsum ipsum lorem.</p>
-                    <p>example@example.com</p>
-                    <p><button class="button">Contact</button></p>
+                    <p><button class="button-2">Contact</button></p>
                     <p><a href="javascript:void(0)" onclick="toggle_visibility('waleed-up');">Close</a></p>
                   </div>
                 </div>
@@ -208,8 +203,8 @@
         <div id="contact-info">
           <p id="contact-title">Contact Us:</p>
             <p class="contact-stuff" id="contact-info-first">Address</p>
-            <p class="contact-stuff">number</p>
-            <p class="contact-stuff">email@email.com</p>
+            <p class="contact-stuff">Number</p>
+            <p class="contact-stuff">nutridaili@gmail.com</p>
         </div>
         <div id="contact-form">
             <div id="name-elements">
