Fixed About section, added personal description

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
   <article id="nutri">
     <h1>What is NutriDaili?</h1>
     <p>NutriDaili is a revolutionary app that let's you keep track of your diet while rewarding you for meeting your goals. When you are about to eat a meal, take a picture of it through the app and it will automatically count your calories for you.</p>
-    <p>We teamed up with President's Choice to reward you with PC points for maintaining your diet and eating healthy, so you can save on those groceries the next time you need to shop.</p>
+    <p>We plan to team up with President's Choice to reward you with PC points for maintaining your diet and eating healthy, so you can save on those groceries the next time you need to shop.</p>
     <img src="pc-plus-logo.png" alt="PC Plus Logo">
   </article>
 
@@ -87,7 +87,7 @@
 </div>
 </article>
 <article id="about">
-        <h1 style="text-align:center; font-size:50;">The Team!</h1>
+        <h1 style="text-align:center; font-size:50;">The Team</h1>
 
     <div class="row">
       <div class="column">
@@ -141,9 +141,9 @@
               <div id="rohan-up" class="up-pos">
                 <div id="up-wrapper">
                     <div id="up-container" style="width:29%; background-color: #1b1e33; text-align: center;">
-                    <h2>Rohan</h2>
+                    <h2>Rohan Prasad</h2>
                     <p class="title">CEO and Founder</p>
-                    <p>Some text that describes me lorem ipsum ipsum lorem.</p>
+                    <p>I have a strong interest in programming and working on big projects.</p>
                     <p><button class="button-2">Contact</button></p>
                     <p><a href="javascript:void(0)" onclick="toggle_visibility('rohan-up');">Close</a></p>
                   </div>
