--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
                     <div id="up-container" style="width:29%; background-color: #1b1e33; text-align: center;">
                     <h2>Faizaan</h2>
                     <p class="title">CEO and Founder</p>
-                    <p>Some text that describes me lorem ipsum ipsum lorem.</p>
+                    <p>I'm an avid mobile and web developer! I am always keen on learning something new!</p>
                     <p><button class="button-2">Contact</button></p>
                     <p><a href="javascript:void(0)" onclick="toggle_visibility('faiz-up');">Close</a></p>
                   </div>
@@ -164,7 +164,7 @@
                     <div id="up-container" style="width:29%; background-color: #1b1e33; text-align: center;">
                     <h2>Anton</h2>
                     <p class="title">CEO and Founder</p>
-                    <p>Some text that describes me lorem ipsum ipsum lorem.</p>
+                    <p>I enjoy coding in python!</p>
                     <p><button class="button-2">Contact</button></p>
                     <p><a href="javascript:void(0)" onclick="toggle_visibility('anton-up');">Close</a></p>
                   </div>
@@ -185,7 +185,7 @@
                     <div id="up-container" style="width:29%; background-color: #1b1e33; text-align: center;">
                     <h2>Waleed</h2>
                     <p class="title">CEO and Founder</p>
-                    <p>Some text that describes me lorem ipsum ipsum lorem.</p>
+                    <p>I enjoy the pleasure of making things that are useful to other people through programming!</p>
                     <p><button class="button-2">Contact</button></p>
                     <p><a href="javascript:void(0)" onclick="toggle_visibility('waleed-up');">Close</a></p>
                   </div>
