--- a/index.html
+++ b/index.html
@@ -99,9 +99,9 @@
             <div id="alex-up" class="up-pos">
               <div id="up-wrapper">
                   <div id="up-container" style="width: 29%; background-color: #1b1e33; text-align: center;">
-                  <h2>Alex Moussa</h2>
+                  <h2>Alex</h2>
                   <p class="title">Developper and Founder</p>
-                  <p>Always learning and pursuing my intersts in Web Dev.</p>
+                  <p>Always learning and pursuing my intersts in Web Dev.		</p>
                   <p><button class="button-2">Contact</button></p>
                   <p><a href="javascript:void(0)" onclick="toggle_visibility('alex-up');">Close</a></p>
                 </div>
@@ -122,7 +122,7 @@
                     <div id="up-container" style="width:29%; background-color: #1b1e33; text-align: center;">
                     <h2>Faizaan</h2>
                     <p class="title">CEO and Founder</p>
-                    <p>I'm an avid mobile and web developer! I am always keen on learning something new!</p>
+                    <p>I'm an avid mobile and web developer! I am always keen on learning something new!	</p>
                     <p><button class="button-2">Contact</button></p>
                     <p><a href="javascript:void(0)" onclick="toggle_visibility('faiz-up');">Close</a></p>
                   </div>
@@ -141,9 +141,9 @@
               <div id="rohan-up" class="up-pos">
                 <div id="up-wrapper">
                     <div id="up-container" style="width:29%; background-color: #1b1e33; text-align: center;">
-                    <h2>Rohan Prasad</h2>
+                    <h2>Rohan</h2>
                     <p class="title">CEO and Founder</p>
-                    <p>I have a strong interest in programming and working on big projects.</p>
+                    <p>I have a strong interest in programming and working on big projects.			   </p>
                     <p><button class="button-2">Contact</button></p>
                     <p><a href="javascript:void(0)" onclick="toggle_visibility('rohan-up');">Close</a></p>
                   </div>
